--- a/embarc/adventures/static/style.css
+++ b/embarc/adventures/static/style.css
@@ -111,7 +111,8 @@ span.icon-bar {
     opacity: 0.2;
     border: 1px;
     border-radius: 80px;
-    padding: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     white-space: nowrap;
 }
 
