--- a/embarc/adventures/templates/adventure_view.html
+++ b/embarc/adventures/templates/adventure_view.html
@@ -142,7 +142,7 @@
                                     </a>
                                     <a
                                         href="{% url 'submission_add' parent_id=submission.id adventure_id=adventure.id %}"
-                                        title="Add mission"
+                                        title="Add task"
                                     >
                                         ➕️
                                     </a>
